--- a/steamui/css/library.css
+++ b/steamui/css/library.css
@@ -1,6 +1,6 @@
 /*
-	Steamclient - Bibliotheks-Anpassungen
-  Template: PenginUI - v0.99.8 - Stand 17.01.2021
+  Steamclient - Bibliotheks-Anpassungen
+  Template: PenginUI - v0.99.8 - Stand 22.01.2021
   (c) Copyright - www.gameindustry.eu
 */
 /* Menüs & Hintergründe */
@@ -146,6 +146,9 @@ div.DialogDropDown_CurrentDisplay {
 }
 input.DialogInput.DialogInputPlaceholder.DialogTextInputBase {
 	text-transform: none !important;
+}
+.appdetailsprimarylinkssection_LinkInner_7k4qm .appdetailsprimarylinkssection_Link_1b6LY {
+	background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; color: rgb(186, 192, 198) !important;
 }
 /* Kollektionen & Titel */
 .allcollections_Collection_3IWn- .allcollections_CollectionImage_2ERAQ .allcollections_CollectionBG_akZKn .allcollections_BackgroundImage_2I7jw {
