--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -36,8 +36,8 @@
 }
 
 /*
-  Steamclient - Webkit Anpassungen
-  Template: PenginUI - v0.99.8 - Stand 22.01.2021
+	Steamclient - Webkit Anpassungen
+  Template: PenginUI - v0.99.8 - Stand 02.02.2021
   (c) Copyright - www.gameindustry.eu
 */
 
@@ -149,6 +149,7 @@ div.recommendation_highlight.recommendation_title_offset, div.friend_reviews { d
 div.reviews_info_ctn, div.review_ctn { border:none; }
 div#specials_container, div.contenthub_specials_ctn, div.contenthub_spotlight_container, div.contenthub_dailydeal_container, div.rightcol.cart_rightcol { display:none !important; }
 div.block.responsive_apppage_reviewblock { display: none !important; }
+div.block.responsive_apppage_details_right.heading, p.reason.for, div.similar_recent_apps_container, hr { display:none !important; }
 
 /* Profilanpassungen und Popups */
 div.profile_page.has_profile_background, body.profile_page, div.profile_page {background-color: black !important;}
@@ -194,7 +195,7 @@ div.profile_friend_links.profile_count_link_preview_ctn.responsive_groupfriends_
 
 /* Profil: Unterseite Erfolge */
 .achievement_progress_bar_ctn .progress_bar, .achieveBarProgress, .achievementProgressBar .progress { background: rgba(185, 255, 83, 1.0); background: -webkit-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: -moz-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: linear-gradient(to bottom, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)) !important; }
-img.achievement_icon { display: none !important; }
+div.showcase_achievementscompletionist_game_num_achievements { background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 
 /* Profil: PopUp Fenster, Dropdown etc. */
 div.newmodal { max-width: 600px !important;} 
@@ -209,6 +210,7 @@ span#ScreenshotUploadLink, a#ScreenshotManagementToggle { border-radius:unset !i
 div#ScreenshotManagementControls { width:946px !important; border: 1px solid rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important;}
 #ScreenshotManagementInstructions { color:#acb2b8 !important; }
 a#ScreenshotUploadLink, #VideoUploadLink { background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
+div#modalContent.modal_frame, div#modalContentTitleBar, div.screenshot_popup_modal_content { background: rgb(22, 26, 31) !important; background-color: rgb(22, 26, 31) !important; border:rgb(22, 26, 31) !important; }
 
 /* Profil: Bugfixes */
 .showcase_award { padding: initial !important; }
@@ -266,6 +268,7 @@ div.forum_topic_tooltip { border: 1px solid #4a545e !important; background: #161
 .forumtopic_comments .commentthread_comment.commentthread_answer_comment { border: 1px solid #595e64 !important; }
 div.bb_code, blockquote.bb_blockquote, .forumtopic_answer .answer_quote, blockquote.bb_blockquote.with_author { border-width: 1px solid; border-color: rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important; opacity: 0.7; color: #acb2b8; }
 div.forum_topic_needs_content_check_notice.forum_newtopic_box img {display: none !important; }
+div.mature_content_notice { padding: 3px; border-radius: 2px; background-color: rgba( 192, 45, 46) !important; color: white !important; }
 
 /* Warnmeldungen & Fehler */
 div.DRM_notice, .ack_message_header, .support_message_header { background: none; background-color: rgba(192,45,46) !important; color: white !important; }
