--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -37,7 +37,7 @@
 
 /*
 	Steamclient - Webkit Anpassungen
-  Template: PenginUI - v0.99.8 - Stand 04.10.2021
+  Template: PenginUI - v0.99.8 - Stand 12.04.2021
   (c) Copyright - www.gameindustry.eu
 */
 
@@ -118,6 +118,7 @@ div.maincontent.discussions_header.responsive_hidden { border-bottom: 5px solid 
 
 /* Ausgeblendetes Zeug */
 div.game_area_description.game_area_description img { display: none !important; }
+a.btnv6_blue_hoverfade.btn_medium { background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 a.btnv6_blue_hoverfade.btn_medium.right, div.queue_controls_description, div.btn_next_in_queue.btn_next_in_queue_trigger { display: none !important; }
 div#recommended_block.block { display: none !important; }
 div#franchise_block.block { display: none !important; }
@@ -198,6 +199,7 @@ div.profile_friend_links.profile_count_link_preview_ctn.responsive_groupfriends_
 div.showcase_achievementscompletionist_game_num_achievements { background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 
 /* Profil: PopUp Fenster, Dropdown etc. */
+div.newmodal { max-width: 600px !important;} 
 .newmodal_background { background: #161a1f !important; }
 .modal_top_bar { background: none !important; }
 .newmodal_content_border { padding:0px !important; }
@@ -247,6 +249,7 @@ div.pullup_item, a.pullup_item { color: rgb(186, 192, 198) !important; backgroun
 div.pullup_item:hover, a.pullup_item:hover { color: wheat !important; }
 .apphub_Card.interactable:hover { border:1px solid #373e47 !important; }
 .creatorhomeembed_FollowButton_1HwWX { background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
+div#queue_ignore_menu_arrow.queue_menu_arrow.btn_medium { background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 .contenthub_page .tabbar_ctn { box-shadow: 0 5px 0 -1px #2b2f34 !important; }
 .tabarea .tab.active { background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 .tabarea .tab .tab_content:hover { color: rgb(186, 192, 198) !important; background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
@@ -329,6 +332,11 @@ div.home_page_content.deep_dive_block { display: none !important; }
 div.react_landing_background {background-image: none !important; background-color:transparent !important; }
 div#SaleSection_10548 { display: none; }
 
-/* Kuration */
+/* Kuration & Gruppen */
 .lists_more_container .item .overlay { background: transparent !important; }
 .lists_more_container .item .bg { filter: contrast(100%) grayscale(0.7); }
+div.grouppage_friendsingroup { display: none; }
+.group_tab.active > span { background:none !important; }
+a.group_tab { background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
+a#group_tab_overview.group_tab.active { color: rgb(186, 192, 198) !important; background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
+div.grouppage_header { border-bottom: 5px solid rgb(49, 54, 58) !important; }
