--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -37,7 +37,7 @@
 
 /*
 	Steamclient - Webkit Anpassungen
-  Template: PenginUI - v0.99.8 - Stand 12.04.2021
+  Template: PenginUI - v0.99.8 - Stand 29.04.2021
   (c) Copyright - www.gameindustry.eu
 */
 
@@ -331,6 +331,7 @@ div#home_takeunder_ctn.home_ctn, div.home_page_content_takeunder { display: none
 div.home_page_content.deep_dive_block { display: none !important; }
 div.react_landing_background {background-image: none !important; background-color:transparent !important; }
 div#SaleSection_10548 { display: none; }
+.SaleOuterContainer .SaleSectionTabListContainer:first-child {display:none !important;}
 
 /* Kuration & Gruppen */
 .lists_more_container .item .overlay { background: transparent !important; }
