--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -37,7 +37,7 @@
 
 /*
 	Steamclient - Webkit Anpassungen
-  Template: PenginUI - v0.99.9 - Stand 17.10.2021
+  Template: PenginUI - v0.99.9 - Stand 18.10.2021
   (c) Copyright - www.gameindustry.eu
 */
 
@@ -208,9 +208,10 @@ div.profile_badges_badge { visibility:visible !important; margin-top:-40px !impo
 div.profile_group_links.profile_count_link_preview_ctn.responsive_groupfriends_element { visibility:visible !important; }
 div.profile_friend_links.profile_count_link_preview_ctn.responsive_groupfriends_element { visibility:visible !important; }
 
-/* Profil: Unterseite Erfolge */
+/* Profil / Unterseite Erfolge und Hundemarken */
 .achievement_progress_bar_ctn .progress_bar, .achieveBarProgress, .achievementProgressBar .progress { background: rgba(185, 255, 83, 1.0); background: -webkit-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: -moz-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: linear-gradient(to bottom, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)) !important; }
 div.showcase_achievementscompletionist_game_num_achievements { background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
+img.achievement_icon { display: none !important; }
 
 /* Profil: PopUp Fenster, Dropdown etc. */
 div.newmodal { max-width: 600px !important;} 
