--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -65,6 +65,7 @@ div.recommendation_desc:before, div.recommendation_desc:after { display:none;}
 div.bb_h1, div.bb_h2, div.bb_h3, div.bb_h4, h1, h2, h2.large_title { color:#EBEBEB !important; }
 div.bb_h1, .bb_wysiwyg h1 { margin-bottom: 5px !important; }
 div.bb_table div.bb_table_td { border: none !important; }
+div.bb_table_th { border-bottom:1px solid #color: #969696 !important;}
 span.updated_app_date, span.rateUpCount, a.bb_link { color:#ebebeb !important; }
 div.app_tag, div.hover_details_block_full.ellipsis { color:#ebebeb !important; background: #161a1f !important; }
 
@@ -110,6 +111,7 @@ a#tab_general.group_tab.active, a#tab_tools.group_tab.active, a#tab_games.group_
 a.group_tab:hover { background-color: transparent !important; }
 a#tab_games.group_tab:hover, a#tab_tools.group_tab:hover, a#tab_general.group_tab:hover { background-color: transparent !important; }
 div.maincontent.discussions_header.responsive_hidden { border-bottom: 5px solid rgba(49, 54, 58, 1) !important; }
+div#TopBarNavigation.top_navigation_bar, div.group_link { background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 
 /* Remoteplay */
 .rpt_anywhere_header_left, .remoteplay_howto_section, .rpt_anywhere_how_ctn, .rpt_section1_container, .rpt_section2_container, .rpt_section3_container, .rpt_section4_container { background:none !important; background-color: none !important; }
@@ -197,10 +199,12 @@ a.screenshot_showcase_smallscreenshot.screenshot_count { border: 1px solid #4a54
 .friend_block_link_overlay.offline, div.playersection_avatar.border_color_offline img { filter: contrast(100%) grayscale(1) !important; }
 .miniprofile_top { border: 1px solid #4a545e !important; background: #353e47 !important; }
 .miniprofile_favorite_badge, .profile_header_badge { border: 1px solid #4a545e !important; background: #161a1f !important; }
+div.badge_row.is_link { border:none !important; }
+div.profile_xp_block_remaining_bar_progress { background-image: rgba(185, 255, 83, 1.0); background-image: -webkit-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background-image: -moz-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background-image: linear-gradient(to bottom, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); }
 .profile_comment_area .commentthread_textarea { background-color:transparent !important;}
 .profile_comment_area .commentthread_entry_quotebox { min-height:50px; max-height:100px; border:1px solid #000 !important; background-color:#2f3841 !important; }
-.profile_subpage_column .maincontent, body.migrated_profile_page .profile_subpage_column #BG_bottom.maincontent {background-image:none !important;}
-div.profile_customization_header {background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
+.profile_subpage_column .maincontent, body.migrated_profile_page .profile_subpage_column #BG_bottom.maincontent { background-image:none !important;}
+div.profile_customization_header { background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 
 /* Profil: Awards */
 div.profile_count_link_preview_ctn { visibility:hidden !important; }
@@ -309,6 +313,7 @@ div.partnersaledisplay_SaleOverlayCtn_3GTIc.SaleOverlayCtn { display: none !impo
 .reward_bg_1, .reward_bg_2, .reward_bg_3, .reward_bg_4, .reward_bg_5, div#faq.rewards_faq_ctn, div.rewards_badge_levelup_ctn.reward_bg_3, div.rewards_profile_tier.reward_bg_4 , div.partnersaledisplay_SaleSection_1cOoC.eventbbcodeparser_SaleSectionCtn_39HWX, div.reward_items_ctn { background: transparent !important; background-color:transparent !important; }
 div.responsive_page_content, body.v6.labs, .trending_reviews_controls_ctn { background:none !important; background-image:none !important; background-color:#161a1f !important; }
 div.profile_header_valve_employee { padding: 3px; border-radius: 2px; background-color: rgba( 192, 45, 46) !important; color: white !important; }
+div.curation_warning_box { padding: 3px; border-radius: 2px; background-color: rgba( 192, 45, 46) !important; color: white !important; }
 
 /* Marktanpassungen, Inventar etc */
 .market_headertip { border:1px solid #cc0000; background-color:#161a1f; }
@@ -367,3 +372,5 @@ a.group_tab { background-image: none !important; background: rgba(0, 0, 0, 0) li
 a#group_tab_overview.group_tab.active { color: rgb(186, 192, 198) !important; background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 div.grouppage_header { border-bottom: 5px solid rgb(49, 54, 58) !important; }
 body.v6 #curator_popup_body .popup_body.popup_menu { background-color: rgb(53, 62, 71) !important; }
+div.grouppage_join_area { background-color:transparent !important; }
+div.joinchat_button { background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
