--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -37,7 +37,7 @@
 
 /*
 	Steamclient - Webkit Anpassungen
-  Template: PenginUI - v0.99.9 - Stand 18.10.2021
+  Template: PenginUI - v0.99.9 - Stand 22.10.2021
   (c) Copyright - www.gameindustry.eu
 */
 
@@ -112,6 +112,10 @@ a.group_tab:hover { background-color: transparent !important; }
 a#tab_games.group_tab:hover, a#tab_tools.group_tab:hover, a#tab_general.group_tab:hover { background-color: transparent !important; }
 div.maincontent.discussions_header.responsive_hidden { border-bottom: 5px solid rgba(49, 54, 58, 1) !important; }
 div#TopBarNavigation.top_navigation_bar, div.group_link { background-image: none !important; background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
+.tabOnL, .tabOnR, .tabOffL, .tabOffR { display:none !important; }
+div#personalAchieveTabOn.tab { background:transparent !important; }
+.tabOff, .tabOn { background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
+div#subtabs { background-image: none !important;  background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(49, 54, 58, 1), rgba(43, 46, 52, 1)) repeat scroll 0 0 !important; border: 1px solid transparent !important; border-image: linear-gradient(to bottom, #3a4043 0%, #25282d 100%) !important; border-image-slice: 1 !important; }
 
 /* Remoteplay */
 .rpt_anywhere_header_left, .remoteplay_howto_section, .rpt_anywhere_how_ctn, .rpt_section1_container, .rpt_section2_container, .rpt_section3_container, .rpt_section4_container { background:none !important; background-color: none !important; }
@@ -219,7 +223,7 @@ div.showcase_achievementscompletionist_game_num_achievements { background-image:
 img.achievement_icon { display: none !important; }
 
 /* Profil: PopUp Fenster, Dropdown etc. */
-div.newmodal { max-width: 600px !important;} 
+div.newmodal { max-width: 750px !important; } 
 .newmodal_background { background: #161a1f !important; }
 .modal_top_bar { background: none !important; }
 .newmodal_content_border { padding:0px !important; }
@@ -237,6 +241,8 @@ div#modalContent.modal_frame, div#modalContentTitleBar, div.screenshot_popup_mod
 .showcase_award { padding: initial !important; }
 div.showcase_content_bg { margin-bottom: 0px !important; }
 div.showcase_Stats_row.showcase_content_bg, div.showcase_content_bg.showcase_stats_row, div.showcase_content_bg { border-radius:unset !important; }
+.showcase_slot.openslot { border: 1px dashed #4c4c4c !important; border-radius: none !important;}
+div.achieveImgHolder { margin:0px 0px 0px 2px !important; }
 
 /* Global: Buttonhorror, Dropdowns, Tabs und sonstige Eingabefelder >.< */
 .btn_wrapper { margin-right: 4px !important; }
